--- a/Deliveries/DD/dd_temp.lyx
+++ b/Deliveries/DD/dd_temp.lyx
@@ -1572,283 +1572,288 @@ This function handles the taxi queue for a certain zone, searching for new
 \end_layout
 
 \begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
 /*
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	This function handles the taxi queue
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	for a certain zone.It uses some other
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	methods defined below for the basic
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	operations such as refreshing, adding
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	and removing an item from the queue.
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	Some methods are not defined and they
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	refer to the interaction with gps.
  We
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	don't know weather they exists or
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	not, or exists with different names,
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	but they are surely easily implemented
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	using the gps' API.
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 */
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 List<int> queue;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 void TAXI_QUEUE_HANDLER(){
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 queue = empty_set;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 while service is active do{
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	List<signal> taxiSignals = searchSignals(currentZone);
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	for(i=0; i<taxiSignals.length; i++){
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 		id = getTaxiDriverId(taxiSignals[i]);
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 		if(id doesn't belongs to queue){
 \end_layout
 
-\begin_layout Standard
-		queue = ADD_TO_QUEUE(id);
+\begin_layout Plain Layout
+
+			queue = ADD_TO_QUEUE(id);
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 		}
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	}
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	queue = REFRESH_QUEUE(); 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 /*
 \end_layout
 
-\begin_layout Standard
-after inserting new elements, the system refreshes the 	queue in order to
- eliminate taxi drivers that moved in 	another zone.
+\begin_layout Plain Layout
+
+the refreshing of the queue happen whenever a 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
+taxi driver  changes his status, for whatever reason,
+\end_layout
+
+\begin_layout Plain Layout
+
+such as when the unavailability status is set,
+\end_layout
+
+\begin_layout Plain Layout
+
+or a request get declined.
+\end_layout
+
+\begin_layout Plain Layout
+
 */
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
-	}
-\end_layout
+\begin_layout Plain Layout
 
-\begin_layout Standard
 }
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
-List<int> REFRESH_QUEUE(){
+\begin_layout Plain Layout
+
+List<int> ADD_TO_QUEUE(int taxiDriverId){
 \end_layout
 
-\begin_layout Standard
-	Position currentPosition;
+\begin_layout Plain Layout
+
+	queue.add(taxiDriverId); 
 \end_layout
 
-\begin_layout Standard
-	
-\end_layout
+\begin_layout Plain Layout
 
-\begin_layout Standard
-	for(i=0;i<queue.length;i++){
-\end_layout
-
-\begin_layout Standard
-		currentPosition=getTaxiDriverPosition(queue[i]); 	
-\end_layout
-
-\begin_layout Standard
-
-\end_layout
-
-\begin_layout Standard
-		if(currentPosition doesn't belongs to currentZone){
-\end_layout
-
-\begin_layout Standard
-			queue = REMOVE_FROM_QUEUE(queue[i]);
-\end_layout
-
-\begin_layout Standard
-			i--;
-\end_layout
-
-\begin_layout Standard
-	/* in this way the algorithm will recheck the same 		value of i at the
- next iteration, but with the correct 		next value, taking into account
- that the list we are 		reading changes at every remove.
-\end_layout
-
-\begin_layout Standard
-	*/
-\end_layout
-
-\begin_layout Standard
-		}
-\end_layout
-
-\begin_layout Standard
-	}
-\end_layout
-
-\begin_layout Standard
 	return queue;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 }
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
-List<int> ADD_TO_QUEUE(int taxiDriverId){ 	queue.add(taxiDriverId); 
+\begin_layout Plain Layout
+
+List<int> REMOVE_FROM_QUEUE(int taxiDriverId){
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
+	queue.remove(taxiDriverId);
+\end_layout
+
+\begin_layout Plain Layout
+
 	return queue;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 }
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
-List<int> REMOVE_FROM_QUEUE(int taxiDriverId){ 	queue.remove(taxiDriverId);
-\end_layout
+\begin_layout Plain Layout
 
-\begin_layout Standard
-	return queue;
-\end_layout
-
-\begin_layout Standard
-}
-\end_layout
-
-\begin_layout Standard
-
-\end_layout
-
-\begin_layout Standard
 List<int> GET_QUEUE(){
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	queue = REFRESH_QUEUE;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 	return queue;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
 }
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
-Shared ride search
+Private ride search
 \end_layout
 
 \begin_layout Standard
-
-\shape italic
-Private Ride Search:
-\shape default
- the algorithm retrieves the zone of the starting point of the ride, then
+The algorithm retrieves the zone of the starting point of the ride, then
  according to that queue forwards the request to the first taxi driver in
  the line, empting the queue with a FIFO policy.
  If the request is accepted the taxi is removed from the queue and takes
@@ -1867,131 +1872,337 @@ Private Ride Search:
 \begin_layout Standard
 
 \color black
-void SEARCH_SHARED_RIDE(Position startingPoint, Position destinationPoint){
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+/*
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	Ride selectedRide = RIDE_MATCHING;
+The algorithm retrieves the zone of the starting point of
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	if(ride == null){
+the ride, then according to that queue forwards the reuest
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-		create a new ride with the specified starting and destination points;
+to the first taxi driver in the line, empting the queue
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
+with a FIFO policy.
+ If the request is accepted the taxi
+\end_layout
+
+\begin_layout Plain Layout
+
+is removed from the queue and takes in charge the call.
+\end_layout
+
+\begin_layout Plain Layout
+
+Otherwise he is removed and readded to the same queue,
+\end_layout
+
+\begin_layout Plain Layout
+
+in order to shift him in the bottom position.
+\end_layout
+
+\begin_layout Plain Layout
+
+*/
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+Ride SEARCH_PRIVATE_RIDE(Call call){
+\end_layout
+
+\begin_layout Plain Layout
+
+Zone startingZone=call.getQueueStartingZone();
+\end_layout
+
+\begin_layout Plain Layout
+
+List<int> queue = startingZone.GET_QUEUE();
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+for(i=0, j=0; i<queue.length() && j<queue.length(); i++, j++){
+\end_layout
+
+\begin_layout Plain Layout
+
+	forward request to taxi driver with id queue[i];
+\end_layout
+
+\begin_layout Plain Layout
+
+	wait for taxi driver response; 
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+	if(taxi driver 	accepts the call){
+\end_layout
+
+\begin_layout Plain Layout
+
+		ride<-create a new ride;
+\end_layout
+
+\begin_layout Plain Layout
+
+		REMOVE_FROM_QUEUE(queue[i]);
+\end_layout
+
+\begin_layout Plain Layout
+
+		return ride;
+\end_layout
+
+\begin_layout Plain Layout
+
 	}
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
 	else{
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-		add the customer to the selected ride;
+		REMOVE_FROM_QUEUE(queue[i]);
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
+		ADD_TO_QUEUE(queue[i]);
+\end_layout
+
+\begin_layout Plain Layout
+
+		KEEP_TRACK_OF_THE_REFUSING_DRIVER();
+\end_layout
+
+\begin_layout Plain Layout
+
+		/* 
+\end_layout
+
+\begin_layout Plain Layout
+
+		This operation in order to not forward
+\end_layout
+
+\begin_layout Plain Layout
+
+		requests to the same taxi driver twice.
+\end_layout
+
+\begin_layout Plain Layout
+
+		*/
+\end_layout
+
+\begin_layout Plain Layout
+
 	}
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
 }
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-Ride RIDE_MATCHING(Position startingPoint, Position destinationPoint){
+return null;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	List<Position> path <- calculate the ideal path for the 	ride, knowing
- the starting and destination points as 	parameters;
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	List<Position> currentPath = new List<Position> 	for(Ride r: all the active
- shared ride){ 		currentPath = r.getPath();
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		if(path is totally contained in currentPath && r.passengers.length()<4)
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		return r;
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	if(currentPath.contains(path.startingPoint) && path.contains(currentPath.destinatio
-nPoint) && r.passengers.length()<4)
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	return r;
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	}
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	return null;
-\end_layout
-
-\begin_layout Standard
 }
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
-Private ride reservation call
+Private reservation call
 \end_layout
 
 \begin_layout Standard
-
-\shape italic
-Private Reservation Call:
-\shape default
- the algorithm is used to accomplish a private reserved ride, so it checks
+The algorithm is used to accomplish a private reserved ride, so it checks
  that the hour is at least two hours later and then, 10 minutes before the
  selected time, searches for a taxi driver in the zone.
  If there is no available driver checks the nearby zones.
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+Ride PRIVATE_RESERVATION(ReservationCall call){
+\end_layout
+
+\begin_layout Plain Layout
+
+Time reservationTime = call.getRideStartingTime();
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+if(currentTime()-reservationTime < 2hours){
+\end_layout
+
+\begin_layout Plain Layout
+
+	return null;
+\end_layout
+
+\begin_layout Plain Layout
+
+	/*
+\end_layout
+
+\begin_layout Plain Layout
+
+	a reservation must be at least for 2 hours after the call,
+\end_layout
+
+\begin_layout Plain Layout
+
+	otherwise will be rejected
+\end_layout
+
+\begin_layout Plain Layout
+
+	*/
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+else{
+\end_layout
+
+\begin_layout Plain Layout
+
+	wait until 10 minutes before reservationTime;
+\end_layout
+
+\begin_layout Plain Layout
+
+	Ride ride = SEARCH_PRIVATE_RIDE(call);
+\end_layout
+
+\begin_layout Plain Layout
+
+		while(ride == null && (reservationTime-currentTime()) < 5 minutes){
+\end_layout
+
+\begin_layout Plain Layout
+
+			ride = search for a taxi driver in the adjacent zones;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		notify the customer for the current unavailability of taxi drivers;
+\end_layout
+
+\begin_layout Plain Layout
+
+		ask the customer if he still wants to enjoy the service;
+\end_layout
+
+\begin_layout Plain Layout
+
+		if(customerWants)
+\end_layout
+
+\begin_layout Plain Layout
+
+			retry in 5 minutes;
+\end_layout
+
+\begin_layout Plain Layout
+
+		else return null;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+return ride;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Shared ride search
+\end_layout
+
+\begin_layout Standard
+The algorithm is used to search for a shared ride, paying attention to the
+ matching of the paths.
+ If no shared ride can be matched with the needed path the system creates
+ a new shared ride, and the customer will be the first passenger.
 \end_layout
 
 \begin_layout Standard
@@ -2004,152 +2215,355 @@ Private Reservation Call:
 \begin_layout Standard
 
 \color black
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+void SEARCH_SHARED_RIDE(Position startingPoint, Position destinationPoint){
+\end_layout
+
+\begin_layout Plain Layout
+
+Ride selectedRide = RIDE_MATCHING;
+\end_layout
+
+\begin_layout Plain Layout
+
+if(ride == null){
+\end_layout
+
+\begin_layout Plain Layout
+
+	create a new ride with the specified starting and destination points;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+else{
+\end_layout
+
+\begin_layout Plain Layout
+
+	add the customer to the selected ride;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+Ride RIDE_MATCHING(Position startingPoint, Position destinationPoint){
+\end_layout
+
+\begin_layout Plain Layout
+
+List<Position> path <- calculate the ideal path for the 
+\end_layout
+
+\begin_layout Plain Layout
+
+		ride, knowing the starting and 
+\end_layout
+
+\begin_layout Plain Layout
+
+		destination points as parameters;
+\end_layout
+
+\begin_layout Plain Layout
+
+List<Position> currentPath = new List<Position> 
+\end_layout
+
+\begin_layout Plain Layout
+
+for(Ride r: all the active shared ride){
+\end_layout
+
+\begin_layout Plain Layout
+
+	currentPath = r.getPath();
+\end_layout
+
+\begin_layout Plain Layout
+
+	if(path is totally contained in currentPath && r.passengers.length()<4)
+\end_layout
+
+\begin_layout Plain Layout
+
+		return r;
+\end_layout
+
+\begin_layout Plain Layout
+
+if(currentPath.contains(path.startingPoint) && 
+\end_layout
+
+\begin_layout Plain Layout
+
+	path.contains(currentPath.destinationPoint) && 
+\end_layout
+
+\begin_layout Plain Layout
+
+		r.passengers.length()<4)
+\end_layout
+
+\begin_layout Plain Layout
+
+	return r;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+return null;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Fee amount for shared rides
+\end_layout
+
+\begin_layout Standard
+This algorithm is used to calculate the cost per passenger for every customer
+ ending a shared ride, dividing the fee of the shared parts of the track
+ with the other customers that are sharing the same track.
+ At the end of the shared ride, the sum of all the costs of every customer
+ that joined must be equal to the cost that results for the same total ride
+ made by a single customer.
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+public class Ride{
+\end_layout
+
+\begin_layout Plain Layout
+
+	List<Slot> ride_slots;
+\end_layout
+
+\begin_layout Plain Layout
+
+	//other code
+\end_layout
+
+\begin_layout Plain Layout
+
 /*
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	The algorithm retrieves the zone of the starting point of 	the ride, then
- according to that queue forwards the reuest 	to the first taxi driver in
- the line, empting the queue
+This method calculates the fee related to his ride.
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	with a FIFO policy.
- If the request is accepted the taxi 	is removed from the queue and takes
- in charge the call.
- 	Otherwise he is removed and readded to the same queue,  	in order to shift
- him in the bottom position.
+In order to do this, a specific listener activates
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
+this method when it  	   observes that a customer
+\end_layout
+
+\begin_layout Plain Layout
+
+ends his shared ride.
+\end_layout
+
+\begin_layout Plain Layout
+
 */
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
+	public float feeAmountCalc(Customer passenger){
+\end_layout
+
+\begin_layout Plain Layout
+
+		float passenger_fee = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+		foreach(Slot s: ride_slots){
+\end_layout
+
+\begin_layout Plain Layout
+
+		if(passenger isIn s.passengerList){
+\end_layout
+
+\begin_layout Plain Layout
 
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-Ride SEARCH_PRIVATE_RIDE(Call call){
+passenger_fee = passenger_fee +
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	Zone startingZone=call.getQueueStartingZone(); 	List<int> queue = startingZone.GE
-T_QUEUE(); 		for(i=0, j=0; i<queue.length() && j<queu.length(); i++, j++){
+ (s.final_time - s.initial_time)*(fee_per_minute)/(s.passengerList.length);
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	forward request to taxi driver with id queue[i];
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	wait for taxi driver response; 
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		if(taxi driver 	accepts the call){
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		ride<-create a new ride; 		REMOVE_FROM_QUEUE(queue[i]);
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		return ride;
-\end_layout
-
-\begin_layout Standard
-
-\color black
 		}
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-		else{
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		REMOVE_FROM_QUEUE(queue[i]); 		ADD_TO_QUEUE(queue[i]);
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		i--; 
-\end_layout
-
-\begin_layout Standard
-
-\color black
-/*
-\end_layout
-
-\begin_layout Standard
-
-\color black
-	In this way at the next iteration i'll chech again the 	same index but
- with a different associated object, due to 	the shift.
- j is not decremented, in order to avoid a loop 	if every taxi driver rejects
- the call and the queue 	restarts from the first rejecting taxi driver:
- in this way 	we forward every request only one time to the same taxi 	driver.
-\end_layout
-
-\begin_layout Standard
-
-\color black
-*/
-\end_layout
-
-\begin_layout Standard
-
-\color black
-		}
-\end_layout
-
-\begin_layout Standard
-
-\color black
 	}
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 
-\color black
-	return null;
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
+
+	return passenger_fee;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
 }
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+/*
+\end_layout
+
+\begin_layout Plain Layout
+
+This class represents a time slot; each ride is
+\end_layout
+
+\begin_layout Plain Layout
+
+divided   in many slots.
+   Every time that the
+\end_layout
+
+\begin_layout Plain Layout
+
+number of passengers of the ride   changes (a
+\end_layout
+
+\begin_layout Plain Layout
+
+passenger gets in or gets out of the cab),
+\end_layout
+
+\begin_layout Plain Layout
+
+a new slot is created.
+ Of course the initial
+\end_layout
+
+\begin_layout Plain Layout
+
+time of the   first slot corresponds to the
+\end_layout
+
+\begin_layout Plain Layout
+
+starting time of the ride,    and the final
+\end_layout
+
+\begin_layout Plain Layout
+
+time of the slot n corresponds to the
+\end_layout
+
+\begin_layout Plain Layout
+
+initial time of the slot n+1.
+\end_layout
+
+\begin_layout Plain Layout
+
+*/
+\end_layout
+
+\begin_layout Plain Layout
+
+public class Slot{
+\end_layout
+
+\begin_layout Plain Layout
+
+	private List<Customer> passengerList;
+\end_layout
+
+\begin_layout Plain Layout
+
+	private time initial_time, final_time;
+\end_layout
+
+\begin_layout Plain Layout
+
+	//other code
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
@@ -2198,6 +2612,7 @@ Figure 4.1
 \end_layout
 
 \begin_layout Standard
+\align center
 \begin_inset Graphics
 	filename /Users/gianmarco/Dropbox/MAGISTRALE/SOFTWARE ENGINEERING 2/Project temp/DD/Mockups/Customer/Login.png
 	scale 20
@@ -2244,6 +2659,7 @@ Figure 4.
 \end_layout
 
 \begin_layout Standard
+\align center
 \begin_inset Graphics
 	filename /Users/gianmarco/Dropbox/MAGISTRALE/SOFTWARE ENGINEERING 2/Project temp/DD/Mockups/Customer/Map.png
 	scale 20
@@ -2270,6 +2686,7 @@ Figure 4.
 \end_layout
 
 \begin_layout Standard
+\align center
 \begin_inset Graphics
 	filename /Users/gianmarco/Dropbox/MAGISTRALE/SOFTWARE ENGINEERING 2/Project temp/DD/Mockups/Customer/User Settings.png
 	scale 20
@@ -2289,6 +2706,7 @@ Figure 4.
 \end_layout
 
 \begin_layout Standard
+\align center
 \begin_inset Graphics
 	filename /Users/gianmarco/Dropbox/MAGISTRALE/SOFTWARE ENGINEERING 2/Project temp/DD/Mockups/Customer/Confirm Taxi.png
 	scale 20
@@ -2315,6 +2733,7 @@ Figure 4.
 \end_layout
 
 \begin_layout Standard
+\align center
 \begin_inset Graphics
 	filename /Users/gianmarco/Dropbox/MAGISTRALE/SOFTWARE ENGINEERING 2/Project temp/DD/Mockups/Customer/Reservation.png
 	scale 20
@@ -2334,6 +2753,7 @@ Figure 4.
 \end_layout
 
 \begin_layout Standard
+\align center
 \begin_inset Graphics
 	filename /Users/gianmarco/Dropbox/MAGISTRALE/SOFTWARE ENGINEERING 2/Project temp/DD/Mockups/Customer/Sharing.png
 	scale 20
